updated blog post for correct spacing with images and code

--- a/app/assets/stylesheets/modules/blog.css.scss
+++ b/app/assets/stylesheets/modules/blog.css.scss
@@ -127,6 +127,9 @@
 		}
 		p {
 			padding-bottom: 1rem;
+			img {
+				margin-top: 1.5rem;
+			}
 		}
 		ol {
 			font-size: 1.5rem;
@@ -164,6 +167,7 @@
 				line-height: 2rem;
 				font-size: 1.1rem;
 				font-weight: normal;
+				margin-bottom: 2rem;
 			}
 		}
 		code {
